get,put,delete e autenticação login e register
